# ekfcc

./: .gitignore  CMakeLists.txt  ekf.py  sdkconfig  sdkconfig.old
first/: metadata.yaml
main/: CMakeLists.txt  config.h  embedded.cc  idf_component.yml  protocol.cc  protocol.h  rgb.cc  rgb.h  tinyekf.h  tinyekf_custom.h  wifi_ap.cc  wifi_ap.h
mal/: metadata.yaml
